--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
+  "name": "spark-ai",
+  "version": "1.0.0",
   "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "groq-sdk": "^0.37.0",
-    "node-fetch": "^3.3.2"
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "groq-sdk": "^1.0.0",
+    "dotenv": "^16.0.3"
   }
 }
