--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "body-parser": "^1.20.2",
-    "groq-sdk": "^1.0.0",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "groq-sdk": "^0.37.0"
   }
 }
